# trolleybenchmark

./: README.md  pyproject.toml
examples/: plot_results.py  run_experiment.py
tests/: factories.py  test_core.py  test_experiments.py  test_persistence.py  test_plotting.py
trolleybenchmark/: core.py  experiments.py  logging.py  os_functions.py  persistence.py  plotting.py  runner.py  timing.py
