[tool.poetry]
name = "trolleybenchmark"
version = "0.1.4"
description = "benchmarking dicomtrolley query and download speed"
authors = ["sjoerdk <sjoerd.kerkstra@radboudumc.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.10"
matplotlib = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
